# dot_indicator_vsc

./: CMakeLists.txt  README.md  config.h.in  gcc-arm-none-eabi.cmake  terminal-comands.txt  toolchain.cmake
Core/: Doxyfile
Core/Inc/: alpaca.h  button.h  buzzer.h  can.h  config.h  dot.h  drawing.h  main.h  protocol_selection.h  stm32f1xx_it.h  tim.h  uim6100.h  usart.h
Core/Src/: alpaca.c  button.c  buzzer.c  can.c  demo_mode.c  dot.c  drawing.c  flash.c  font.c  gpio.c  main.c  protocol_selection.c  stm32f1xx_it.c  tim.c  uim6100.c  ukl.c  usart.c
CubeMX/: cubemx.md  dot_indicator.ioc
CubeMX/pin/: STM32F103CBTX_FLASH.ld
CubeMX/spi/: STM32F103CBTX_FLASH.ld
docs/: README.md  docs.md
docs/SDK/: sdk_versions.txt
docs/env/: README.md  env_build_project.md
source/: README.md  source.md  uel.c  uel.h
source/app/: README.md  app.md  config.h  main.c  protocol_selection.c  protocol_selection.h
source/drivers/: LED_driver.c  LED_driver.h  LED_panel_config.h  LED_panel_driver.h  README.md  dot.c  dot.h  dot.md
source/middlewares/: README.md  middlewares.md
source/middlewares/display_symbols/: README.md  bitmap.c  bitmap.h  bitmap_concatenation.c  bitmap_concatenation.h  display_symbols.md  drawing.c  drawing.h  font.c  font.h  image_former_vertical.c  indication.c  indication.h  vertical_animation.c  vertical_animation.h
source/middlewares/peripherals/: README.md  buzzer.c  buzzer.h  flash.c  flash.h  gpio.c  peripherals.md  test_Buzzer.c  test_Buzzer.h  tim.c  tim.h
source/middlewares/peripherals/interfaces/: README.md  SysTick_Delay.c  SysTick_Delay.h  can.c  can.h  interfaces.md  software_SPI.c  software_SPI.h  usart.c  usart.h
source/middlewares/peripherals/menu/: README.md  button.c  button.h  menu_button.md
source/middlewares/protocols_modes/: README.md  protocols_modes.md
source/middlewares/protocols_modes/alpaca/: alpaca.c  alpaca.h  alpaca.md
source/middlewares/protocols_modes/demo_mode/: CMakeLists.txt  README.md  demo.c  demo.h  demo_mode.c  demo_mode.h  demo_mode.md
source/middlewares/protocols_modes/nku/: nku.c  nku.h
source/middlewares/protocols_modes/nku_sd7/: README.md  nku_sd7.c  nku_sd7.h
source/middlewares/protocols_modes/test_mode/: README.md  test_mode.c  test_mode.h  test_mode.md
source/middlewares/protocols_modes/uel/: uel.c  uel.h  uel.md
source/middlewares/protocols_modes/uim6100/: CMakeLists.txt  uim6100.c  uim6100.h  uim6100.md
source/middlewares/protocols_modes/ukl/: ukl.c  ukl.h  ukl.md
spi/: STM32F103CBTX_FLASH.ld  main.h  stm32f1xx_hal_conf.h  stm32f1xx_hal_msp.c  stm32f1xx_it.c  stm32f1xx_it.h
